fixed code snippets overflowing bug, added syntax highlighting

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,11 +16,6 @@ $card-hover-color: rgba(0, 0, 0, 0.15);
 }
 
 @font-face {
-    font-family: "EB Garamond";
-    src: url("../fonts/EB_Garamond/EBGaramond-VariableFont_wght.ttf");
-}
-
-@font-face {
     font-family: "Cormorant";
     src: url("../fonts/Cormorant/Cormorant-VariableFont_wght.ttf");
 }
@@ -30,7 +25,7 @@ $card-hover-color: rgba(0, 0, 0, 0.15);
 }
 
 body {
-    font-family: "EB Garamond", sans-serif;
+    font-family: "Roboto", sans-serif;
     margin: 0;
     background: linear-gradient(
         145deg,
@@ -66,6 +61,14 @@ a:visited {
 .drawing-credit {
     text-align: center;
     color: rgba(230, 230, 230, 0.25);
+}
+
+pre,
+code {
+    border-radius: 0.5rem;
+    max-width: 100%;
+    overflow-x: auto; /* Ajoute la barre de défilement si besoin */
+    display: block; /* Force le bloc de code à respecter la largeur */
 }
 
 @media screen and (min-width: 601px) {
